# CK0444-prj-final

./: .gitignore  README.md  requirements.txt
.github/workflows/: ci-pipeline.yml  data-pipeline.yml
docs/: TrabalhoFinal.md  analise_dados.py  eleicoes.py  notas_eng_sist_inteligentes.md  parse_data.py  suggestions.md  tx_rend.py
presentation/: presentation.md  presentation.tex
sdp-data/: README.md  create_education_data.py  dados_completos.csv  merge_data.py  pipeline.py  pyproject.toml
sdp-data/raw_data/: dados_educacionais.csv
sdp-data/raw_data/tx_rend_municipios_2023/: md5_tx_rend_municipios_2023.txt
sdp-model/: 1_5_0_trf_dataset.csv  README.md  model_results.json  pipeline.py  pyproject.toml
sdp-report/: generate_report.py  index.html
sdp-service/: README.md  model-RFC-ROC_AUC-SMOTE.pkl  pyproject.toml  service_cliente.ipynb
sdp-service/src/sdp/: app.py  service.py
sdp-service/tests/: test_app.py
