[project]
name = "sdp-data"
version = "0.0.1"
description = "SDP - Pipeline de Dados"
authors = [
    {name = "Lincoln Rocha",email = "lincoln@dc.ufc.br"}
]

requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "requests (>=2.31.0,<3.0.0)",
    "openpyxl (>=3.1.2,<4.0.0)",
    "gitpython (>=3.1.44,<4.0.0)",
    "ghapi (>=1.0.6,<2.0.0)"
]

[tool.poetry]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
