[project]
name = "sdp-model"
version = "0.0.1"
description = "SDP - Pipeline de Modelos"
authors = [
    {name = "Lincoln Rocha",email = "lincoln@dc.ufc.br"}
]

requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "scikit-learn (>=1.2,<1.7)",
    "imbalanced-learn (>=0.13.0)"
]

[tool.poetry]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
