[project]
name = "sdp-service"
version = "0.0.1"
description = "SDP - Service"
authors = [
    {name = "Lincoln Rocha",email = "lincoln@dc.ufc.br"}
]

requires-python = ">=3.10"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "scikit-learn (>=1.2,<1.7)",
    "imbalanced-learn (>=0.13.0)"
]

[tool.poetry]
packages = [{include = "sdp", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
